--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -33,10 +33,49 @@
     }
 }
 
+@media screen and (max-width: 375px) {
+    #about .section-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .about-details-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .details-container {
+        width: 100%;
+        margin-bottom: 1rem;
+    }
+    .skills-container {
+        width: 100%;
+    }
+    .skills-icons {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 0.5rem;
+    }
+    .skills-description {
+        padding: 1rem;
+    }
+}
+
 @media screen and (max-width: 480px) {
     .section-container {
         flex-direction: column;
         align-items: center;
+    }
+    .section__pic-container img {
+        width: 100%;
+        height: auto;
+    }
+    .details-container {
+        width: 100%;
+    }
+    .skills-icons {
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .skills-description {
+        padding: 1rem;
     }
 }
 
